--- a/ttech_sesión8.ipynb
+++ b/ttech_sesión8.ipynb
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 41,
       "metadata": {
         "id": "e6dG8ZtHiZQf"
       },
@@ -360,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -377,7 +377,7 @@
               "Year                                                                   0\n",
               "Access to electricity (% of population)                                0\n",
               "Access to clean fuels for cooking                                      0\n",
-              "Renewable-electricity-generating-capacity-per-capita                 931\n",
+              "Renewable-electricity-generating-capacity-per-capita                   0\n",
               "Financial flows to developing countries (US $)                      2089\n",
               "Renewable energy share in the total final energy consumption (%)     194\n",
               "Electricity from fossil fuels (TWh)                                   21\n",
@@ -394,10 +394,11 @@
               "Land Area(Km2)                                                         1\n",
               "Latitude                                                               1\n",
               "Longitude                                                              1\n",
+              "Acceso > 50%                                                           0\n",
               "dtype: int64"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -408,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -625,9 +626,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "jXOtUJMEvxUB"
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     },
@@ -642,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 44,
       "metadata": {
         "id": "vBFE6woBtiK8"
       },
@@ -655,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 45,
       "metadata": {
         "id": "-8re6I_Bwvyp"
       },
@@ -700,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 54,
       "metadata": {
         "id": "XDTji22rx3B1"
       },
@@ -715,7 +714,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -744,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -757,7 +756,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Matriz de confusión:\n",
+            "Matriz de Confusión:\n",
             "[[114  32]\n",
             " [ 42 542]]\n"
           ]
@@ -765,13 +764,13 @@
       ],
       "source": [
         "matrix_confusion = confusion_matrix(y_prueba, y_predicciones)\n",
-        "print(\"Matriz de confusión:\")\n",
+        "print(\"Matriz de Confusión:\")\n",
         "print(matrix_confusion)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -799,7 +798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -863,7 +862,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
