--- a/ttech_sesión10.ipynb
+++ b/ttech_sesión10.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 67,
       "metadata": {
         "id": "CX1xbNAbbgFx"
       },
@@ -29,7 +29,7 @@
               "True"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 67,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [
         {
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 59,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2831,7 +2831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2845,7 +2845,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2854,7 +2854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -3009,7 +3009,7 @@
               "[1082 rows x 5 columns]"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3020,7 +3020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3037,7 +3037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -3204,7 +3204,7 @@
               "[1082 rows x 6 columns]"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3216,7 +3216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3225,7 +3225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3240,7 +3240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3250,7 +3250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -3276,7 +3276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -3307,7 +3307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -3339,7 +3339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3350,7 +3350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -3376,10 +3376,130 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "def predecir_sentimiento(texto, pipeline_entrenado):\n",
+        "    texto_procesado = texto.lower()\n",
+        "    print(texto_procesado)\n",
+        "    prediccion = pipeline_entrenado.predict([texto_procesado])\n",
+        "    \n",
+        "    \n",
+        "    return prediccion[0] "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 51,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'the model s '"
+            ]
+          },
+          "execution_count": 51,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "texto = 'the model s '\n",
+        "texto"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "the model s \n",
+            "El sentimiento es positivo\n"
+          ]
+        }
+      ],
+      "source": [
+        "#\n",
+        "sentimiento = predecir_sentimiento(texto, pipeline)\n",
+        "if sentimiento == 1:\n",
+        "    print(\"El sentimiento es positivo\")\n",
+        "else:\n",
+        "    if sentimiento == 0:\n",
+        "        print(\"El sentimiento es negativo\")\n",
+        "    else:\n",
+        "        print('El sentimiento es neutro')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Analisis de sentimiento usando Vader"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 71,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package vader_lexicon to\n",
+            "[nltk_data]     /home/usuario/nltk_data...\n",
+            "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 71,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "nltk.download('vader_lexicon')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#col_resumen = 'Sumary'\n",
+        "#for i.resumen in enumerate(datos[col_resumen]):\n",
+        "#    print('i:', i, 'Resumen:', i.resumen)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from collections import defaultdict, Counter"
+      ]
     }
   ],
   "metadata": {
