--- a/ttech_sesión10.ipynb
+++ b/ttech_sesión10.ipynb
@@ -3445,7 +3445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -3456,28 +3456,12 @@
             "[nltk_data]     /home/usuario/nltk_data...\n",
             "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
           ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 71,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
-        "nltk.download('vader_lexicon')\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "import nltk\n",
+        "nltk.download('vader_lexicon')\n",
+        "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
         "from sklearn.model_selection import train_test_split"
       ]
     },
@@ -3487,9 +3471,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#col_resumen = 'Sumary'\n",
-        "#for i.resumen in enumerate(datos[col_resumen]):\n",
-        "#    print('i:', i, 'Resumen:', i.resumen)"
+        "ais = SentimentIntensityAnalyzer()"
       ]
     },
     {
