--- a/ProyectoFinal_Probador.ipynb
+++ b/ProyectoFinal_Probador.ipynb
@@ -58,7 +58,8 @@
         " 13. Aplicación de técnicas de regresión para predecir valores de variables.\n",
         " 14. Ajusta tu modelo.\n",
         " 15. Presente su solución.\n",
-        " 16. Inicie, supervise y mantenga su sistema."
+        " 16. Inicie, supervise y mantenga su sistema.\n",
+        " 17. "
       ]
     },
     {
